# styles

./: .isort.cfg  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: main.yaml  pypi-release.yaml
carbonplan_styles/: __init__.py  _make_themes.py  altair.py  colors.py  mpl.py
carbonplan_styles/data/: colormaps.json
carbonplan_styles/mpl/: __init__.py  _make_themes.py  carbonplan_dark.mplstyle  carbonplan_light.mplstyle  colormaps.py  themes.py
carbonplan_styles/tests/: test_altair.py  test_altair_theme.py  test_mpl.py  test_mpl_style.py
demo/: theme_demo.ipynb
